# pthreads-win32.cmake

./: CMakeLists.txt
